# rustinel-rules

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: atomic.yml  validate.yml
docs/: authoring.md  detection-as-code.md  index.md  packs.md  repository.md  rustinel-support.md  usage.md
packs/linux/advanced/: pack.yml
packs/linux/essential/: pack.yml
packs/macos/advanced/: pack.yml
packs/macos/essential/: pack.yml
packs/windows/advanced/: pack.yml
packs/windows/essential/: pack.yml
packs/windows/hunting/: pack.yml
rules/ioc/common/: ioc_eicar_test.yml
rules/sigma/linux/: file_event_lnx_cron_persistence.yml  file_event_lnx_ldso_preload_hijack.yml  file_event_lnx_shell_profile_persistence.yml  file_event_lnx_ssh_authorized_keys.yml  file_event_lnx_sshd_config_tamper.yml  file_event_lnx_sudoers_tamper.yml  file_event_lnx_systemd_persistence.yml  proc_creation_lnx_download_pipe_shell.yml  proc_creation_lnx_exec_from_world_writable.yml  proc_creation_lnx_shell_dev_tcp_reverse_shell.yml  proc_creation_lnx_webserver_spawns_shell.yml
rules/sigma/macos/: file_event_macos_launch_persistence.yml  proc_creation_macos_download_execute_cradle.yml  proc_creation_macos_exec_from_world_writable.yml  proc_creation_macos_gatekeeper_bypass.yml  proc_creation_macos_keychain_dump_security.yml  proc_creation_macos_local_admin_account.yml  proc_creation_macos_osascript_admin_prompt.yml  (+1 more)
schemas/: ioc.schema.json  pack.schema.json
tests/atomic/: .gitignore  README.md  manifest.json  run_atomics.py
tools/: attack_techniques.json  build_catalog.py  build_packs.py  download_sigma.py  lib.py  link_packs.py  release_notes.py  upload_radegast.py  upload_ragest.py  validate.py
(+144 files in other folders)
