[project]
name = "rustinel-rules-tools"
version = "0.1.0"
description = "Validation and build tooling for rustinel-rules detection content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "yara-x>=1.0",
    "ruamel.yaml>=0.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.1",
]
radegast = [
    "requests>=2.34.2",
]

# This repo ships detection content plus helper scripts under tools/; it is not a
# distributable Python package, so uv treats it as a non-package project (no build
# backend, no install of this project itself).
[tool.uv]
package = false
exclude-newer = "3 days"  # Prevent supply-chain attacks by excluding recently published versions of dependencies.

[tool.ruff]
line-length = 100
src = ["tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = ["tools"]
