[project]
name = "rustinel-rules-tools"
version = "0.2.0"
description = "Validation and build tooling for rustinel-rules detection content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "yara-x>=1.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

# This repo ships detection content plus helper scripts under tools/; it is not a
# distributable Python package, so uv treats it as a non-package project (no build
# backend, no install of this project itself).
[tool.uv]
package = false

[tool.ruff]
line-length = 100
src = ["tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = ["tools"]
